--- a/_src/pug/helpers/arrays.pug
+++ b/_src/pug/helpers/arrays.pug
@@ -10,4 +10,4 @@
 
 - let record = 1
 
-- const scenario = [['Выбор стиля ','Грамотное смешение стилей и оттенков – главный шаг к правильному построению пространства'],['Составление схемы освещения ','Различные приемы освещения  сбалансируют размер комнаты и сфокусирует внимание на ее достоинствах'],['Поиск текстильных решений ','Шторы, ковры, покрывала, пледы и подушки дарят уют и придают интерьеру завершенный, целостный вид'],['Дополнительные предметы декора и аксессуары','Сочетание функциональности и уюта в каждом предмете декора: картины, плакаты, скульптуры, посуда, флористика и не только'],]
+- const scenario = [[`Выбор стиля`,'Грамотное смешение стилей и оттенков – главный шаг к правильному построению пространства'],['Составление схемы освещения ','Различные приемы освещения  сбалансируют размер комнаты и сфокусирует внимание на ее достоинствах'],['Поиск текстильных решений ','Шторы, ковры, покрывала, пледы и подушки дарят уют и придают интерьеру завершенный, целостный вид'],['Дополнительные предметы декора и\u00A0аксессуары','Сочетание функциональности и уюта в каждом предмете декора: картины, плакаты, скульптуры, посуда, флористика и не только'],]
